# cvm-agent

./: .gitignore  BOOTSTRAP.md  BUILD.md  CONSTITUTION.md  Cargo.toml  DESIGN.md  Dockerfile.enclave  HARDWARE_VALIDATION.md  HOSTED_SITE.md  INVARIANT.md  LLM_ATTESTED.md  README.md  REPO_STRUCTURE.md  SHADOW.md  STAGES.md  plans.md
.github/workflows/: attested-self-build.yml  llmattest-live-ra.yml  llmattest-release.yml  release.yml  test-attestation.yml  update-registry.yml
action/: action.yml
capture/browser-extension/: background.js  content.js  options.html  options.js
deploy/: STACK-POLICY.md  gcp-tdx.sh  gen-eat-pass-policy.sh  install-uqaz1.sh  run-tool-gate-stack.sh  tool-gate.env.example
deploy/policies/: uqaz1-azure.example.json
docs/: TRUST_BOOTSTRAP.md  agents-own-nothing-draft.md  attestation-tiers-post-draft.md  index.html
docs/assets/: runcard.css  runcard.js  verify.js
docs/assets/webtui/: cs.css  webtui.css
docs/card-lab/: README.md  index.html  package-lock.json  package.json
docs/card-lab/scripts/: generate-card-concepts.mjs  verify-qr.mjs
examples/: mesh.rs
examples/fixtures/: tdx_stage1.cbor
packaging/: install.ps1  install.sh  local-site.sh  package-llmattest.sh  smoke-local-site.sh
registry/: 1bcc378f3e539476.json  7134a971c316693d.json  84b01dd0b1d254a9.json  README.md  bd2b0b8e31805d7d.json  d221ff023b1bf958.json
src/: cmd_tool.rs  eat.rs  leaf.rs  lib.rs  llm_attested.rs  llm_attested_net.rs  llm_capture.rs  main.rs  registry.rs  value_x.rs
src/net/: mod.rs
src/quote/: mod.rs
src/tee/: mod.rs
src/tool_gate/: email.rs  intent.rs  mint.rs  mod.rs  origin.rs  wire.rs
testdata/chain/: nitro_stage0.cbor  snp_stage0.cbor  snp_stage1.cbor  tdx_ouroboros.cbor  tdx_stage0.cbor
tests/: attested_tls_e2e.rs  attested_tls_live.rs  chain_e2e.rs  eat_kms_e2e.rs  hardware_regression.rs  llm_capture_paths_e2e.rs  llm_hosted_site_e2e.rs  llm_remote_attestation_e2e.rs
v2/: .gitignore  Cargo.toml  HOSTED_SITE.md  LLM_ATTESTED.md  README.md
v2/action/: action.yml
v2/capture/: README.md
v2/capture/browser-extension/: manifest.json
v2/packaging/: install.sh  local-site.sh  package-llmattest.sh  smoke-local-site.sh
v2/registry/: 8c9587c0981d7878.json  c92ad5967b1d9e12.json
v2/src/: http_service.rs  lib.rs  llm_attested_net.rs  main.rs
v2/tests/: llm_capture_paths_e2e.rs  llm_hosted_site_e2e.rs  llm_remote_attestation_e2e.rs
